--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,22 @@
     <artifactId>airport</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+   <dependencies>
 
+       <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+       <dependency>
+           <groupId>mysql</groupId>
+           <artifactId>mysql-connector-java</artifactId>
+           <version>5.1.6</version>
+       </dependency>
+
+
+
+       <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+       <dependency>
+        <groupId>org.flywaydb</groupId>
+        <artifactId>flyway-core</artifactId>
+        <version>4.1.2</version>
+    </dependency>
+   </dependencies>
 </project>
