--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,8 @@
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
-           <version>5.1.6</version>
+           <version>5.1.5</version>
        </dependency>
-
 
 
        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
@@ -26,4 +25,16 @@
         <version>4.1.2</version>
     </dependency>
    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
