--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
         <artifactId>flyway-core</artifactId>
         <version>4.1.2</version>
     </dependency>
+       <dependency>
+           <groupId>junit</groupId>
+           <artifactId>junit</artifactId>
+           <version>4.12</version>
+       </dependency>
    </dependencies>
     <build>
         <plugins>
