--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,12 @@
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.5</version>
        </dependency>
-
+       <dependency>
+           <groupId>junit</groupId>
+           <artifactId>junit</artifactId>
+           <version>4.11</version>
+           <scope>test</scope>
+       </dependency>
 
        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
        <dependency>
