--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,5 @@
 db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/airport?createDatabaseIfNotExist=true
+db.urlTest=jdbc:mysql://localhost:3306/testAirport?createDatabaseIfNotExist=true
 db.user=root
 db.password=admin
