--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,16 @@
     <groupId>com.brainacad</groupId>
     <artifactId>airport</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging> war </packaging>
+
+    <properties>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </properties>
+
 
    <dependencies>
+
+
 
        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
        <dependency>
@@ -23,20 +31,35 @@
            <scope>test</scope>
        </dependency>
 
-       <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
        <dependency>
         <groupId>org.flywaydb</groupId>
         <artifactId>flyway-core</artifactId>
         <version>4.1.2</version>
     </dependency>
        <dependency>
-           <groupId>junit</groupId>
-           <artifactId>junit</artifactId>
-           <version>4.12</version>
+           <groupId>javax.servlet</groupId>
+           <artifactId>servlet-api</artifactId>
+           <version>3.0-alpha-1</version>
+           <scope>provided</scope>
        </dependency>
+
+       <dependency>
+           <groupId>javaee</groupId>
+           <artifactId>javaee-api</artifactId>
+           <version>5</version>
+       </dependency>
+
+       <dependency>
+           <groupId>javax</groupId>
+           <artifactId>javaee-web-api</artifactId>
+           <version>6.0</version>
+           <scope>provided</scope>
+       </dependency>
+
    </dependencies>
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -46,5 +69,7 @@
                 </configuration>
             </plugin>
         </plugins>
+
+
     </build>
 </project>
